[metadata]
name = la-backends
version = 0.1.4
author = Wessel Bruinsma
author_email = wessel.p.bruinsma@gmail.com
description = A generic interface for linear algebra backends
url = https://github.com/wesselb/lab
license = MIT
license_file = LICENCE.txt
long_description = file: README.md
long_description_content_type = text/markdown
